--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<! Hi there! Here's a quick tip: developer mode isn't gonna help you :)>
 <html>
     <head>
         <title>Scavenger hunt</title>
